--- a/doc/template/github.html
+++ b/doc/template/github.html
@@ -17,13 +17,14 @@
   <div class='mp' id='man'>
 
   <div class='man-navigation' style='display:none'>
+    <a href="http://travis-ci.org/#!/dejw/pickaxe"><img src="https://secure.travis-ci.org/dejw/pickaxe.png" /></a>
     {{#section_heads}}
     <a href="#{{id}}">{{text}}</a>
     {{/section_heads}}
   </div>
   
   <a href="http://github.com/dejw/pickaxe">
-  	<img style="position: fixed; top: 0; right: 0; border: 0;" 
+    <img style="position: fixed; top: 0; right: 0; border: 0;" 
   		src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" 
   		alt="Fork me on GitHub" />
 	</a>
