--- a/doc/template/github.html
+++ b/doc/template/github.html
@@ -17,7 +17,7 @@
   <div class='mp' id='man'>
 
   <div class='man-navigation' style='display:none'>
-    <a href="http://travis-ci.org/#!/dejw/pickaxe"><img src="https://secure.travis-ci.org/dejw/pickaxe.png" /></a>
+    <a href="http://travis-ci.org/#!/dejw/pickaxe"><img src="http://travis-ci.org/dejw/pickaxe.png" style="margin:0"/></a>
     {{#section_heads}}
     <a href="#{{id}}">{{text}}</a>
     {{/section_heads}}
